--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -11,24 +10,25 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            tools:context=".MainActivity">
+            tools:context=".scenes.home.HomeActivity">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?android:attr/actionBarSize"
                 android:background="@color/colorPrimary"
-                app:titleTextColor="@android:color/white"/>
+                android:minHeight="?android:attr/actionBarSize"
+                app:titleTextColor="@android:color/white" />
 
         <EditText
                 android:id="@+id/resultTextOutput"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:inputType="textMultiLine"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/inconsolata"
                 android:gravity="top|start"
+                android:inputType="textMultiLine"
                 android:scrollbars="none"
-                tools:ignore="Autofill, LabelFor"/>
+                tools:ignore="Autofill, LabelFor" />
 
     </LinearLayout>
 
