--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            tools:context=".scenes.home.HomeActivity">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".scenes.home.HomeActivity">
 
         <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:minHeight="?android:attr/actionBarSize"
-                app:titleTextColor="@android:color/white" />
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:minHeight="?android:attr/actionBarSize"
+            app:titleTextColor="@android:color/white" />
 
         <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/put_your_data" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/put_your_data"
+            android:textColor="@color/primary_text"
+            android:textSize="16sp" />
 
         <EditText
-                android:id="@+id/mainTextInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/inconsolata"
-                android:gravity="top|start"
-                android:inputType="textMultiLine"
-                android:scrollbars="none"
-                tools:ignore="Autofill, LabelFor" />
+            android:id="@+id/mainTextInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inconsolata"
+            android:gravity="top|start"
+            android:inputType="textMultiLine"
+            android:scrollbars="none"
+            android:textColor="@color/primary_text"
+            android:textSize="18sp"
+            tools:ignore="Autofill, LabelFor" />
 
         <Button
-                android:id="@+id/mainBtnSubmit"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="@string/divide" />
+            android:id="@+id/mainBtnSubmit"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="@string/divide" />
 
     </LinearLayout>
 
