--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FF9800</color>
     <color name="primary_text">#2C303D</color>
+    <color name="black_half_transparent">#88000000</color>
 </resources>
