--- a/presentation/src/main/res/layout/item_result.xml
+++ b/presentation/src/main/res/layout/item_result.xml
@@ -3,27 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/itemResultSender"
-        android:layout_width="120dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/inconsolata"
-        android:padding="15dp"
-        android:scrollbars="none"
-        android:textColor="@color/primary_text"
-        android:textIsSelectable="true"
-        android:textSize="18sp"
-        tools:ignore="Autofill, LabelFor" />
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/itemResultSender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inconsolata"
+            android:scrollbars="none"
+            android:textColor="@color/primary_text"
+            android:textIsSelectable="true"
+            android:textSize="18sp"
+            tools:ignore="Autofill, LabelFor" />
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/itemResultSituation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inconsolata"
+            android:scrollbars="none"
+            android:textColor="@color/primary_text"
+            android:textIsSelectable="true"
+            android:textSize="18sp"
+            tools:ignore="Autofill, LabelFor" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/itemResultHistory"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:fontFamily="@font/inconsolata"
-        android:padding="15dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="15dp"
         android:scrollbars="none"
         android:textColor="@color/primary_text"
         android:textIsSelectable="true"
