--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:context=".scenes.home.HomeActivity">
+        app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -20,36 +19,61 @@
             android:minHeight="?android:attr/actionBarSize"
             app:titleTextColor="@android:color/white" />
 
-        <TextView
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <ScrollView
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/put_your_data"
-            android:textColor="@color/primary_text"
-            android:textSize="16sp" />
+            android:gravity="center"
+            android:orientation="vertical"
+            tools:context=".scenes.home.HomeActivity">
 
-        <EditText
-            android:id="@+id/mainTextInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:fontFamily="@font/inconsolata"
-            android:gravity="top|start"
-            android:hint="@string/home_input_hint"
-            android:inputType="textMultiLine"
-            android:scrollbars="none"
-            android:textColor="@color/primary_text"
-            android:textSize="18sp"
-            tools:ignore="Autofill, LabelFor" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/put_your_data"
+                android:textColor="@color/primary_text"
+                android:textSize="16sp" />
 
-        <Button
-            android:id="@+id/mainBtnSubmit"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="@string/divide" />
+            <EditText
+                android:id="@+id/mainTextInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:fontFamily="@font/inconsolata"
+                android:gravity="top|start"
+                android:hint="@string/home_input_hint"
+                android:inputType="textMultiLine"
+                android:scrollbars="none"
+                android:textColor="@color/primary_text"
+                android:textSize="18sp"
+                tools:ignore="Autofill, LabelFor" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/mainBtnSubmit"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="@string/divide" />
 
-</ScrollView>
+        </LinearLayout>
+
+    </ScrollView>
+
+    <!--<include
+        layout="@layout/layout_progress"
+        android:visibility="gone" />-->
+
+    <include
+        layout="@layout/layout_error"
+        android:visibility="gone" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
