--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FF9800</color>
     <color name="primary_text">#2C303D</color>
+    <color name="secondary_text">#696868</color>
     <color name="black_half_transparent">#88000000</color>
 </resources>
