--- a/presentation/src/main/res/layout/fragment_result_output.xml
+++ b/presentation/src/main/res/layout/fragment_result_output.xml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp"
-        tools:context=".scenes.home.HomeActivity">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/resultTextOutput"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/inconsolata"
-            android:gravity="top|start"
-            android:scrollbars="none"
-            android:textColor="@color/primary_text"
-            android:textIsSelectable="true"
-            android:textSize="18sp"
-            tools:ignore="Autofill, LabelFor" />
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp"
+            tools:context=".scenes.home.HomeActivity">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/resultTextOutput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/inconsolata"
+                android:gravity="top|start"
+                android:scrollbars="none"
+                android:textColor="@color/primary_text"
+                android:textIsSelectable="true"
+                android:textSize="18sp"
+                tools:ignore="Autofill, LabelFor" />
 
-</ScrollView>
+        </LinearLayout>
+
+    </ScrollView>
+
+    <include
+        layout="@layout/layout_progress"
+        android:visibility="gone" />
+
+    <include
+        layout="@layout/layout_error"
+        android:visibility="gone" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
