--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="primary_text">#2C303D</color>
     <color name="secondary_text">#696868</color>
     <color name="black_half_transparent">#88000000</color>
+    <color name="white">#FFF</color>
     <color name="white_85p_transparent">#D9FFFFFF</color>
     <color name="background_evens">#1000</color>
     <color name="background_odds">#0000</color>
